# mdl

./: HANDOFF.md  README.md  pyproject.toml
scripts/: build_llamacpp.ps1
src/mdl/: __init__.py  add.py  cli.py  config.py  console.py  convert.py  doctor.py  errors.py  hub.py  library.py  locks.py  ops.py  osenv.py  paths.py  proc.py  verify.py  volume.py
src/mdl/registry/: __init__.py  lmstudio.py  ollama.py
tests/: test_add_ops.py  test_config.py  test_convert.py  test_download_status.py  test_gc.py  test_library.py  test_locks.py  test_modelfile.py  test_ollama_import.py  test_osenv.py  test_paths.py  test_proc.py  test_resume.py  test_verify.py  test_volume.py
