[project]
name = "mdl"
version = "0.1.0"
description = "Manage a local LLM library across HF transformers/vLLM, llama.cpp, Ollama, and LM Studio on Windows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "mdl" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "platformdirs>=4.2",
    "huggingface-hub[hf_xet]>=0.34",
    "tomli-w>=1.0",
]

[project.scripts]
mdl = "mdl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdl"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
